# deal_flow_finder

./: .env.example  .gitignore  .impeccable.md  .pre-commit-config.yaml  CLAUDE.md  PLAN.md  README.md  dealflow-radar (2).html  pyproject.toml  vercel.json
api/: index.py  (+1 more)
backend/: .env.example  CLAUDE.md  README.md  firms.yaml  pyproject.toml
backend/data/: a16z_partners.json  a16z_portfolio.json  sequoia_partners.json  sequoia_portfolio.json  ycombinator_partners.json  ycombinator_portfolio.json
backend/migrations/: 001_init.sql  apply.py
backend/scripts/: run_edgar_for_all_partners.py  scrape_a16z_portfolio.py  scrape_a16z_team.py  scrape_sequoia_portfolio.py  scrape_sequoia_team.py  scrape_ycombinator_portfolio.py  scrape_ycombinator_team.py  seed_from_json.py
backend/src/deal_flow/application/: CLAUDE.md
backend/src/deal_flow/application/dtos/: team_url.py
backend/src/deal_flow/application/use_cases/: aggregate_item_themes.py  analyze_partner_linkedin_signals.py  analyze_partner_twitter_signals.py  enrich_firm_partners_with_linkedin.py  enrich_firm_portfolio_with_linkedin.py  enrich_partner_with_twitter.py  extract_firm_blog_posts.py  extract_firm_partners.py  extract_firm_portfolio.py  linkedin_post_mapping.py  load_firm_partner_profiles.py  load_firm_portfolio_companies.py  search_partner_form_d_filings.py  summarize_partner_bio.py  thematize_items.py
backend/src/deal_flow/domain/: CLAUDE.md
backend/src/deal_flow/domain/entities/: blog_post.py  form_d_filing.py  founder.py  partner.py  partner_form_d_signal.py  portfolio_company.py
backend/src/deal_flow/domain/value_objects/: date_range.py  form_d_related_person.py
backend/src/deal_flow/infrastructure/: CLAUDE.md
backend/src/deal_flow/infrastructure/cache/: file_cache.py
backend/src/deal_flow/infrastructure/config/: settings.py
backend/src/deal_flow/infrastructure/db/: connection.py
backend/src/deal_flow/infrastructure/persistence/: file_board_seat_log.py  file_partner_directory.py  file_partner_profile_repository.py  file_portfolio_company_repository.py  output_store.py  postgres_partner_profile_repository.py  postgres_portfolio_company_repository.py
backend/src/deal_flow/interfaces/: CLAUDE.md
backend/src/deal_flow/interfaces/api/: app.py  dependencies.py
backend/src/deal_flow/interfaces/cli/: scrape_team.py  verify_extraction.py
backend/tests/: CLAUDE.md  _fakes.py
backend/tests/fixtures/edgar/: a16z_lsv_fund_ii_b.xml
backend/tests/unit/application/use_cases/: test_aggregate_item_themes.py  test_analyze_partner_linkedin_signals.py  test_analyze_partner_twitter_signals.py  test_enrich_firm_partners_with_linkedin.py  test_enrich_firm_portfolio_with_linkedin.py  test_linkedin_post_mapping.py  test_search_partner_form_d_filings.py  test_thematize_items.py
backend/tests/unit/infrastructure/persistence/: test_file_board_seat_log.py  (+1 more)
(+144 files in other folders)
