[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deal_flow"
version = "0.1.0"
description = "Deal-flow backend, Clean Architecture"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "firecrawl-py>=2.0.0",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "PyYAML>=6.0",
  "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "httpx>=0.27",
  "ruff>=0.5",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
# B008: FastAPI's `Depends(...)` in argument defaults is the idiomatic pattern.
ignore = ["B008"]
